export default class Invitation {
  private when: Date;
}
