export default class Ticket {
  private fee: number;

  getFee(): number {
    return this.fee;
  }
}
