@startuml
Audience --> Bag: bag
Audience ..> Ticket

Bag --> Invitation: invitation
Bag --> Ticket: ticket

TicektSeller --> TicketOffice: ticketOffice
TicektSeller ..> Audience

TicketOffice --> Ticket: tickets
TicketOffice ..> Audience

Theater --> TicektSeller: ticketSeller
Theater ..> Audience

class Audience {
  +buy(ticket)
}

class Bag {
  +hold(ticket)
}

class Invitation {
  
}

class Ticket {
  +getFee()
}

class TicektSeller {
  +sellTo()
}

class TicketOffice {
  +sellTicketTo(audience)
}

class Theater {
  +enter(audience)
}
@enduml